# concourse-oa

./: .dockerignore  .gitignore  Dockerfile  README.md  ReadMe.md  pyproject.toml  test.py
data/: shopping_habits.csv  weekly_searches_for_programming_languages.csv
src/agent/: llm.py  prompts.yaml  routers.py  schemas.py
src/api/v1/: chat.py  main.py  models.py
